test/Fail/Issue3461.err
Issue3461.agda:31.17-32: error: [GenericDocError]
cong (.Id.id IdX) (lem x)
when checking that the expression
unquote (follows-from (quoteTerm (cong id (lem x)))) has type T x
